Small button scss change for sidebar

--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -2,16 +2,16 @@
 <div class="border-top">
     <ul>
         <li>
-            <button>Category 1</button>
+            <button class="text-button">Category 1</button>
         </li>
         <li>
-            <button>Category 2</button>
+            <button class="text-button">Category 2</button>
         </li>
         <li>
-            <button>Category 3</button>
+            <button class="text-button">Category 3</button>
         </li>
         <li>
-            <button>Category 4</button>
+            <button class="text-button">Category 4</button>
         </li>
     </ul>
 </div>
