--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -1,4 +1,26 @@
+ul {
+    list-style-type: none;
+}
+
 .border-top {
     border-top: solid 2px violet;
     padding-top: 10px;
 }
+
+.text-button {
+    background: transparent;
+    border: none;
+    padding: 0;
+    font-size: 25px; 
+    color: white; /* Customize the text color */
+    text-decoration: none;
+    cursor: pointer;
+  
+    &:focus {
+      outline: none;
+    }
+  
+    &:hover {
+      text-decoration: underline; /* Optional, adds an underline on hover */
+    }
+  }
