--- a/src/app/item-grid/item-grid.component.html
+++ b/src/app/item-grid/item-grid.component.html
@@ -1,6 +1,14 @@
 <h1>{{ this.categoryService.currentCategory() }}</h1>
 <div class="flex-parent-element">
-    @for (item of itemList; track item.id){
-        <app-item class="flex-child-element" [item]=item></app-item>
+    @if (categoryService.currentCategory() === "New"){
+        @for (item of itemList; track item.id){
+            <app-item class="flex-child-element" [item]=item></app-item>
+        } 
+    } @else {
+        @for (item of itemList; track item.id){
+            @if (item.category === categoryService.currentCategory()){
+            <app-item class="flex-child-element" [item]=item></app-item>
+            }
+        }
     }
 </div>
