--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,3 +15,21 @@
     padding: 0;
     height: 100%;
   }
+
+  .text-button {
+    background: transparent;
+    border: none;
+    padding: 0;
+    font-size: 25px; 
+    color: white; /* Customize the text color */
+    text-decoration: none;
+    cursor: pointer;
+  
+    &:focus {
+      outline: none;
+    }
+  
+    // &:hover {
+    //   text-decoration: underline; /* Optional, adds an underline on hover */
+    // }
+  }
