Added admin page to add items

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
 <app-header></app-header>
-
 <main>
-<app-sidebar></app-sidebar>
+<!-- <app-sidebar></app-sidebar>
 <div>
   <app-item-grid></app-item-grid>
-</div>
-
+</div> -->
+<app-admin></app-admin>
 </main>
