--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,2 @@
 <app-header></app-header>
-<main>
-<!-- <app-sidebar></app-sidebar>
-<div>
-  <app-item-grid></app-item-grid>
-</div> -->
-<app-admin></app-admin>
-</main>
+<router-outlet></router-outlet>
