--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -3,4 +3,5 @@
     <h1>{{ item.name }}</h1>
     <p>{{ item.category }}</p>
     <p>€ {{ item.price}} </p>
+    <button (click)="onBuy()">Buy</button>
 </div>
