--- a/src/app/item-grid/item-grid.component.html
+++ b/src/app/item-grid/item-grid.component.html
@@ -1,5 +1,6 @@
+<section class="shop-items">
 <h1>{{ this.categoryService.currentCategory() }}</h1>
-<div class="flex-parent-element">
+<div class="item-grid">
     @if (categoryService.currentCategory() === "New"){
         @for (item of itemList; track item.id){
             <app-item class="flex-child-element" [item]=item></app-item>
@@ -12,3 +13,4 @@
         }
     }
 </div>
+</section>
