--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
     <div class="logo" routerLink="/">HiguReya</div>
     <ul>
     <li>
-        <a>Cart</a>
+        <a routerLink="/cart">Cart</a>
     </li> 
     <!-- class="text-button push" routerLink="/cart">
         <span>Cart </span>
