--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -105,3 +105,16 @@
     text-align: center;
     margin-top: 15px;
   }
+
+  .toggle-link {
+    text-align: center;
+    margin-top: 1rem;
+    color: $color-accent;
+    cursor: pointer;
+    font-size: 12px;
+  
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+  
