--- a/src/app/add-item/add-item.component.html
+++ b/src/app/add-item/add-item.component.html
@@ -4,48 +4,40 @@
   <form (ngSubmit)="onSubmit()">
     <p>
       <label for="name">Name</label>
-      <input type="text" id="name" name="name" [(ngModel)]="enteredName"/>
+      <input type="text" id="name" name="name" [(ngModel)]="enteredName" />
     </p>
 
     <p>
       <label for="category">Category</label>
-      <select [ngModel]="enteredCategory">
-                <option disabled
-                value="">--Select a Category--</option>
-                @for(category of categories; track category){
-                    <option>{{ category }}</option>
-                }
-            </select>
+      <select id="category" name="category" [(ngModel)]="enteredCategory">
+        <option disabled value="">--Select a Category--</option>
+        @for(category of categories; track category){
+        <option [value]="category">{{ category }}</option>
+        }
+      </select>
     </p>
 
     <p>
       <label for="price">Price</label>
-      <input type="float" id="price" name="price" [(ngModel)]="enteredPrice"/>
+      <input type="float" id="price" name="price" [(ngModel)]="enteredPrice" />
     </p>
 
     <div>
-        <label for="image">Select an Image:</label>
-        <input
-          type="file"
-          id="image"
-          name="image"
-          accept="image/*"
-          (change)="onFileSelected($event)"
-          required
-        />
-      </div>
+      <label for="image">Select an Image:</label>
+      <input type="file" id="image" name="image" accept="image/*" (change)="onFileSelected($event)" required />
+    </div>
 
     <p class="actions">
       <button type="button" (click)="onCancel()">Cancel</button>
       <button type="submit">Create</button>
     </p>
   </form>
-  
+
   @if(imagePreview){
-    <div class="image-preview">
-        <h3>Image Preview:</h3>
-        <img [src]="imagePreview" alt="Image Preview" class="preview-image"/>
-      </div>
+  <div class="image-preview">
+    <h3>Image Preview:</h3>
+    <img [src]="imagePreview" alt="Image Preview" class="preview-image" />
+  </div>
   }
-  
+
 </dialog>
