--- a/src/app/add-item/add-item.component.html
+++ b/src/app/add-item/add-item.component.html
@@ -2,42 +2,41 @@
 <dialog open>
   <h2>Add Item</h2>
   <form (ngSubmit)="onSubmit()">
-    <p>
+    <div class="form-group">
       <label for="name">Name</label>
-      <input type="text" id="name" name="name" [(ngModel)]="enteredName" />
-    </p>
+      <input type="text" id="name" name="name" [(ngModel)]="enteredName" required />
+    </div>
 
-    <p>
+    <div class="form-group">
       <label for="category">Category</label>
-      <select id="category" name="category" [(ngModel)]="enteredCategory">
+      <select id="category" name="category" [(ngModel)]="enteredCategory" required>
         <option disabled value="">--Select a Category--</option>
-        @for(category of categories; track category){
+        @for (category of categories; track category) {
         <option [value]="category">{{ category }}</option>
         }
       </select>
-    </p>
+    </div>
 
-    <p>
+    <div class="form-group">
       <label for="price">Price</label>
-      <input type="float" id="price" name="price" [(ngModel)]="enteredPrice" />
-    </p>
+      <input type="number" id="price" name="price" [(ngModel)]="enteredPrice" required />
+    </div>
 
-    <div>
-      <label for="image">Select an Image:</label>
+    <div class="form-group">
+      <label for="image">Select an Image</label>
       <input type="file" id="image" name="image" accept="image/*" (change)="onFileSelected($event)" required />
     </div>
 
-    <p class="actions">
+    <div class="form-actions">
       <button type="button" (click)="onCancel()">Cancel</button>
       <button type="submit">Create</button>
-    </p>
+    </div>
   </form>
 
-  @if(imagePreview){
+  @if (imagePreview) {
   <div class="image-preview">
-    <h3>Image Preview:</h3>
+    <h3>Image Preview</h3>
     <img [src]="imagePreview" alt="Image Preview" class="preview-image" />
   </div>
   }
-
 </dialog>
