--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,10 +1,12 @@
-<button [routerLink]="['/admin/customers']" >Customers Management</button>
-<button [routerLink]="['/admin/products']" >Products Management</button>
+<div class="admin-actions">
+    <button [routerLink]="['/admin/customers']">Customers Management</button>
+    <button [routerLink]="['/admin/products']">Products Management</button>
+</div>
 
 @if (isAddingItem) {
-    <app-add-item (cancel)="onCancelAddItem()" (add)="onAddItem($event)"></app-add-item>
+<app-add-item (cancel)="onCancelAddItem()"></app-add-item>
 }
 
 <div class="router-outlet-wrapper">
     <router-outlet></router-outlet>
-  </div>
+</div>
