Create an order

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -14,6 +14,7 @@
     </div>
     }
     <p class="total">Total: {{ totalPrice | currency }}</p>
+    <button (click)="placeOrder()">Place Order</button>
     } @else {
     <p>Your cart is empty.</p>
     }
